# MachineLearningModels

./: CMakeLists.txt  README.md
c++/lib/: cmath.cpp  cmath.h
c++/source/: cmath.cpp
c++/tests/: test_matrix_multiply.cpp
install/: CMakeCache.txt  Makefile  cmake_install.cmake  test_matrix_multiply
python/: test_script.py
